# mozart-ai-compose

./: .coverage-baseline.json  .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE-AGPL  README.md  STATUS.md  VISION.md  batch-to-sheet-rename.yaml  daemon-phase0-scaffold.yaml  daemon-phase1-ipc.yaml  daemon-phase2-service.yaml  daemon-phase3-scheduler.yaml  daemon-phase4-integration.yaml  index.html  mkdocs.yml  modularization-d1.yaml  modularization-d2.yaml  modularization-d3.yaml  modularization-d4.yaml  mozart-code-quality-review.yaml  mozart-observability-improvements.yaml  mozart-opus-evolution-v14.yaml  mozart-opus-evolution-v15.yaml  mozart-opus-evolution-v16.yaml  mozart-opus-evolution-v17.yaml  mozart-opus-evolution-v18.yaml  mozart-opus-evolution-v19.yaml  mozart-opus-evolution-v2.yaml  mozart-opus-evolution-v20.yaml  mozart-opus-evolution-v21.yaml  mozart-opus-evolution-v23.yaml  mozart-opus-evolution-v24.yaml  mozart-opus-evolution-v25.yaml  mozart-opus-evolution-v3.yaml  mozart-opus-evolution.yaml  mozart-phase2-self-dev.yaml  (+18 more)
.flowspec/: config.yaml
DISTRIBUTED-LEARNING-ARCHITECTURE/: index.html
MCP-INTEGRATION/: index.html
OPUS-CONVERGENCE-ANALYSIS/: index.html
TOKEN-COMPRESSION-STRATEGIES/: index.html
cli-reference/: index.html
code-quality-workspace-v2/: 07-quick-wins-remediation.md  08-structural-remediation.md  sheet7-result.md  sheet8-result.md
configuration-reference/: index.html
daemon-guide/: index.html
docs/: DISTRIBUTED-LEARNING-ARCHITECTURE.md  INDEX.yaml  MCP-INTEGRATION.md  OPUS-CONVERGENCE-ANALYSIS.md  PLAN-ANALYSIS.md  README.md  TOKEN-COMPRESSION-STRATEGIES.md  cli-reference.md  compile-reference.md  configuration-reference.md  daemon-guide.md  examples-README.md  getting-started.md  index.md  instrument-guide.md  limitations.md  marianne-reference.md  mozart-reference.md  score-writing-guide.md  technique-ideas.md
evolution-workspace-v13/: .mozart-outcomes.json  01-external-discovery.md  02-internal-discovery.md  03-triplet-synthesis.md  04-quadruplet-meta-synthesis.md  05-evolution-specification.md  06-evolution-execution.md  07-integration-validation.md  08-score-evolution.md  09-coda-summary.md  git-head-sheet2.txt  mozart-opus-evolution-v13.json  sheet1-result.md  sheet2-result.md  sheet3-result.md  sheet4-result.md  sheet5-result.md  sheet6-result.md  sheet7-result.md  sheet8-result.md
evolution-workspace-v14/: 09-coda-summary.md
evolution-workspace-v16/: .mozart-outcomes.json  01-external-discovery.md  02-internal-discovery.md  03-triplet-synthesis.md  04-quadruplet-meta-synthesis.md  05-evolution-specification.md  06-evolution-execution.md  07-integration-validation.md  08-score-evolution.md  09-coda-summary.md  git-head-sheet2.txt  mozart-opus-evolution-v16.json  sheet1-result.md  sheet2-result.md  sheet3-result.md  sheet4-result.md  sheet5-result.md  sheet6-result.md  sheet7-result.md  sheet8-result.md
evolution-workspace-v17/: 09-coda-summary.md
evolution-workspace-v18/: 09-coda-summary.md
evolution-workspace-v20/: 09-coda-summary.md
examples/: README.md  agent-spike.yaml  api-backend.yaml  batch-review.yaml  context-engineering-lab.yaml  cross-sheet-test.yaml  design-review.yaml  dialectic.yaml  dinner-party.yaml  docs-generator.yaml  fix-deferred-issues.yaml  fix-observability.yaml  hello.yaml  issue-fixer.yaml  issue-solver.yaml  iterative-dev-loop-config.yaml  iterative-dev-loop.yaml  lovable-generator.yaml  nonfiction-book.yaml  observability-demo.yaml  palimpsest.yaml  parallel-research-fanout.yaml  parallel-research.yaml  phase3-wiring.yaml  prelude-cadenza-example.yaml  quality-continuous-daemon.yaml  quality-continuous-generic.yaml  quality-continuous.yaml  quality-daemon.yaml  score-composer.yaml  self-improvement.yaml  sheet-review.yaml  simple-batch.yaml  simple-sheet.yaml  skill-builder.yaml  strategic-plan.yaml  systematic-literature-review.yaml  thinking-lab.yaml  training-data-curation.yaml  worktree-isolation.yaml  (+1 more)
getting-started/: index.html
handoffs/: compose-skill--SESSION-HANDOFF-2026-04-12.md
limitations/: index.html
memory-bank/: activeContext.md  progress.md  projectbrief.md
mozart-reference/: index.html
recursive-light-discovery-workspace/: recursive-light-phase1.yaml  recursive-light-phase2.yaml  recursive-light-phase3.yaml  recursive-light-phase4.yaml
research/: index.html
score-writing-guide/: index.html
scores/: evolution-concert.yaml  evolution-prelude.md  legion-dream.yaml  mozart-monitor-concert.yaml  mozart-top-quality.yaml  observer-integration.yaml  project-roadmap.yaml  quality-continuous.yaml  rosetta-corpus.md  the-rosetta-score.yaml  workspace-status-audit.yaml
scripts/: backfill_learning.py  gen_ref_pages.py  generate-agent-scores.py  install-mozartd.sh  monitor-claude-memory.sh  mozartd.service  reset-batch.py  reset-sheet.py
search/: search_index.json
tests/: conftest.py  (+405 more)
(+1071 files in other folders)
